--- a/mandate-manager-step1/mandate-frontend/package.json
+++ b/mandate-manager-step1/mandate-frontend/package.json
@@ -10,13 +10,22 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "^5.51.15",
+    "@vueuse/core": "^14.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.548.0",
     "pinia": "^2.2.4",
+    "radix-vue": "^1.9.17",
+    "tailwind-merge": "^3.3.1",
     "vue": "^3.4.38",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
     "@vitejs/plugin-vue": "^5.2.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "3.4.17",
     "typescript": "^5.5.4",
     "vite": "^5.4.2"
   }
