--- a/mandate-manager-step1/mandate-frontend/tsconfig.json
+++ b/mandate-manager-step1/mandate-frontend/tsconfig.json
@@ -9,7 +9,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.vue"]
 }
